# Datus-Plugins

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
datus-airflow-plugin/: README.md  pyproject.toml
datus-airflow-plugin/datus_airflow_plugin/: __init__.py  client.py  config.py  conn_format.py  datus-plugin.yml  deploy.py  errors.py  output.py  plugin.py
datus-airflow-plugin/datus_airflow_plugin/cli/: __init__.py  assets_cmd.py  backfill_cmd.py  connections_cmd.py  dags_cmd.py  deploy_cmd.py  misc_cmd.py  pools_cmd.py  tasks_cmd.py  variables_cmd.py
datus-airflow-plugin/datus_airflow_plugin/prompts/: system.md.j2
datus-airflow-plugin/tests/: conftest.py  test_client.py  test_commands.py  test_conn_format.py  test_deploy.py  test_output.py  test_plugin_contract.py
datus-aws-common/: pyproject.toml
datus-aws-common/datus_aws_common/: __init__.py  awsconfig.py  client.py  errors.py  output.py
datus-aws-common/tests/: test_common.py
datus-aws-plugins/: README.md  pyproject.toml
datus-aws-plugins/datus-aws-common/: README.md
datus-aws-plugins/datus-aws-common/datus_aws_common/: cli.py  session.py
datus-aws-plugins/datus-cloudwatch-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-cloudwatch-plugin/datus_cloudwatch_plugin/: __init__.py  datus-plugin.yml
datus-aws-plugins/datus-cloudwatch-plugin/tests/: test_plugin_contract.py
datus-aws-plugins/datus-ecs-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-ecs-plugin/datus_ecs_plugin/: datus-plugin.yml
datus-aws-plugins/datus-ecs-plugin/tests/: conftest.py  test_plugin_contract.py
datus-aws-plugins/datus-emr-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-emr-plugin/datus_emr_plugin/: __init__.py  datus-plugin.yml  plugin.py
datus-aws-plugins/datus-emr-plugin/tests/: test_plugin_contract.py
datus-aws-plugins/datus-emr-serverless-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-emr-serverless-plugin/datus_emr_serverless_plugin/: __init__.py  datus-plugin.yml
datus-aws-plugins/datus-emr-serverless-plugin/tests/: test_plugin_contract.py
datus-aws-plugins/datus-glue-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-glue-plugin/datus_glue_plugin/: datus-plugin.yml
datus-aws-plugins/datus-glue-plugin/tests/: conftest.py  test_plugin_contract.py
datus-aws-plugins/datus-iam-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-iam-plugin/datus_iam_plugin/: datus-plugin.yml
datus-aws-plugins/datus-iam-plugin/tests/: test_plugin_contract.py
datus-aws-plugins/datus-mwaa-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-mwaa-plugin/datus_mwaa_plugin/: __init__.py  datus-plugin.yml
datus-aws-plugins/datus-mwaa-plugin/tests/: test_commands.py  test_plugin_contract.py
datus-aws-plugins/datus-quicksight-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-quicksight-plugin/datus_quicksight_plugin/: datus-plugin.yml
datus-aws-plugins/datus-quicksight-plugin/tests/: test_commands.py  test_plugin_contract.py
datus-aws-plugins/datus-s3-plugin/: README.md  pyproject.toml
datus-aws-plugins/datus-s3-plugin/datus_s3_plugin/: __init__.py  config.py  datus-plugin.yml  paths.py  plugin.py
datus-aws-plugins/datus-s3-plugin/tests/: test_plugin_contract.py
datus-aws-plugins/datus_aws_common/: __init__.py
datus-aws-plugins/datus_cloudwatch_plugin/: config.py  plugin.py
datus-aws-plugins/datus_cloudwatch_plugin/cli/: alarms_cmd.py  dashboards_cmd.py
datus-aws-plugins/datus_ecs_plugin/: config.py
datus-aws-plugins/datus_ecs_plugin/cli/: services_cmd.py  tasks_cmd.py
datus-aws-plugins/datus_emr_serverless_plugin/: plugin.py
datus-aws-plugins/datus_emr_serverless_plugin/cli/: __init__.py  applications_cmd.py  jobs_cmd.py
datus-aws-plugins/datus_glue_plugin/: __init__.py  config.py
datus-aws-plugins/datus_iam_plugin/: __init__.py  config.py  plugin.py
datus-aws-plugins/datus_iam_plugin/cli/: __init__.py  policies_cmd.py  roles_cmd.py  users_cmd.py
datus-aws-plugins/datus_mwaa_plugin/: README.md
datus-aws-plugins/datus_mwaa_plugin/cli/: __init__.py
datus-aws-plugins/datus_quicksight_plugin/: config.py
datus-aws-plugins/datus_quicksight_plugin/cli/: _helpers.py  account_cmd.py  datasources_cmd.py  refresh_cmd.py  templates_cmd.py
datus-aws-plugins/datus_s3_plugin/cli/: buckets_cmd.py  objects_cmd.py
datus-aws-plugins/tests/cloudwatch/: conftest.py  test_plugin_contract.py
datus-aws-plugins/tests/emr/: conftest.py  test_plugin_contract.py
datus-aws-plugins/tests/emr_serverless/: test_plugin_contract.py
datus-aws-plugins/tests/glue/: test_commands.py
datus-aws-plugins/tests/iam/: conftest.py
datus-aws-plugins/tests/mwaa/: conftest.py
datus-emr-plugin/: README.md  pyproject.toml
datus-emr-plugin/datus_emr_plugin/: config.py  plugin.py
datus-emr-plugin/datus_emr_plugin/cli/: clusters_cmd.py  steps_cmd.py
datus-emr-plugin/tests/: test_commands.py  test_plugin_contract.py
datus-mwaa-plugin/: README.md  pyproject.toml
datus-mwaa-plugin/datus_mwaa_plugin/: config.py  plugin.py
datus-mwaa-plugin/datus_mwaa_plugin/cli/: cli_cmd.py
datus-mwaa-plugin/tests/: test_plugin_contract.py
datus-quicksight-plugin/: README.md  pyproject.toml
datus-quicksight-plugin/datus_quicksight_plugin/: __init__.py  plugin.py
datus-quicksight-plugin/datus_quicksight_plugin/cli/: analyses_cmd.py  assets_cmd.py  dashboards_cmd.py  datasets_cmd.py  folders_cmd.py  groups_cmd.py  namespaces_cmd.py  themes_cmd.py  users_cmd.py
datus-quicksight-plugin/tests/: conftest.py  test_plugin_contract.py
datus-statsig-plugin/: README.md  pyproject.toml
datus-statsig-plugin/datus_statsig_plugin/: __init__.py  client.py  config.py  datus-plugin.yml  errors.py  output.py  plugin.py  schemas.py
datus-statsig-plugin/datus_statsig_plugin/cli/: __init__.py  describe_cmd.py  events_cmd.py  experiments_cmd.py  ingestion_cmd.py  logs_cmd.py  metric_source_cmd.py  metrics_cmd.py  reports_cmd.py  warehouse_cmd.py
datus-statsig-plugin/tests/: conftest.py  test_commands.py  test_manifest_contract.py  test_plugin_contract.py
(+90 files in other folders)
