[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-airflow-plugin"
version = "0.1.0"
description = "Datus plugin: drive a remote Apache Airflow (3.x REST API v2) from `datus airflow`, with DAG deploy to S3 or a local dags folder"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "airflow", "plugin", "cli"]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.28"]
dev = ["pytest>=8.0", "boto3>=1.28"]

[project.entry-points."datus.plugins"]
airflow = "datus_airflow_plugin.plugin:AirflowPlugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_airflow_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
