[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-airflow-plugin"
version = "0.1.0"
description = "Datus plugin: drive a remote Apache Airflow (3.x REST API v2) from `datus airflow`, with DAG deploy to S3 or a local dags folder"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "airflow", "plugin", "cli"]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
    "boto3>=1.28",
]

[project.optional-dependencies]
# jinja2/jsonschema are test-only: they validate the datus-plugin.yml manifest
# and render the system-prompt template the way datus does.
dev = ["pytest>=8.0", "jinja2>=3.1", "jsonschema>=4.0"]

[project.entry-points."datus.plugins"]
# The value is the PACKAGE name (declarative manifest contract) — datus reads
# datus_airflow_plugin/datus-plugin.yml from it without importing the package.
airflow = "datus_airflow_plugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_airflow_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
