[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-aws-common"
version = "0.1.0"
description = "Shared plumbing for Datus AWS plugins: boto3 session/AssumeRole, config, error mapping, output rendering, CLI helpers"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "boto3", "plugin"]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["datus_aws_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
