[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-aws-plugins"
version = "0.1.0"
description = "Datus AWS plugin suite (s3, glue, iam, emr, emr-serverless, ecs, cloudwatch, quicksight, mwaa) over a shared boto3/session/output layer"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "boto3", "plugin", "cli"]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "PyYAML>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Each plugin is discovered independently by the datus host via its own entry-point.
[project.entry-points."datus.plugins"]
s3 = "datus_s3_plugin.plugin:S3Plugin"
glue = "datus_glue_plugin.plugin:GluePlugin"
iam = "datus_iam_plugin.plugin:IamPlugin"
emr = "datus_emr_plugin.plugin:EmrPlugin"
"emr-serverless" = "datus_emr_serverless_plugin.plugin:EmrServerlessPlugin"
ecs = "datus_ecs_plugin.plugin:EcsPlugin"
cloudwatch = "datus_cloudwatch_plugin.plugin:CloudWatchPlugin"
quicksight = "datus_quicksight_plugin.plugin:QuickSightPlugin"
mwaa = "datus_mwaa_plugin.plugin:MwaaPlugin"

# Ten top-level import packages ship in one wheel; datus_aws_common is the shared
# internal library (no longer published separately).
[tool.hatch.build.targets.wheel]
packages = [
    "datus_aws_common",
    "datus_s3_plugin",
    "datus_glue_plugin",
    "datus_iam_plugin",
    "datus_emr_plugin",
    "datus_emr_serverless_plugin",
    "datus_ecs_plugin",
    "datus_cloudwatch_plugin",
    "datus_quicksight_plugin",
    "datus_mwaa_plugin",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode lets the per-service test dirs reuse the same file names
# (test_commands.py / test_plugin_contract.py / conftest.py) without collisions.
addopts = "--import-mode=importlib"
