[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-emr-plugin"
version = "0.1.0"
description = "Datus plugin: submit and monitor steps on existing EMR (on EC2) clusters and read step logs from `datus emr`"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "emr", "spark", "hadoop", "plugin", "cli"]
dependencies = [
    "datus-aws-common>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.entry-points."datus.plugins"]
emr = "datus_emr_plugin.plugin:EmrPlugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_emr_plugin"]

[tool.uv.sources]
datus-aws-common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
