[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-quicksight-plugin"
version = "0.1.0"
description = "Datus plugin: browse QuickSight datasets/dashboards/analyses and refresh SPICE ingestions from `datus quicksight`"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "quicksight", "bi", "plugin", "cli"]
dependencies = [
    "datus-aws-common>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.entry-points."datus.plugins"]
quicksight = "datus_quicksight_plugin.plugin:QuickSightPlugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_quicksight_plugin"]

[tool.uv.sources]
datus-aws-common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
