[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-statsig-plugin"
version = "0.2.0"
description = "Datus plugin: read Statsig metrics & experiment results, author warehouse-native metric SQL, and drive ETL ingestion from `datus statsig` (Console API v20240601)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "statsig", "plugin", "cli", "metrics", "experiments"]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# jinja2/jsonschema are test-only: datus (not the plugin) renders the
# system-prompt template and validates the config schema at runtime.
dev = ["pytest>=8.0", "jinja2>=3.1", "jsonschema>=4.0"]

[project.entry-points."datus.plugins"]
statsig = "datus_statsig_plugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_statsig_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
