[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-ecs-plugin"
version = "0.1.0"
description = "Datus plugin: run and monitor tasks on existing ECS/Fargate clusters, scale services, and read task logs from `datus ecs`"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "ecs", "fargate", "plugin", "cli"]
dependencies = [
    "datus-aws-common>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jinja2>=3.1"]

[project.entry-points."datus.plugins"]
ecs = "datus_ecs_plugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_ecs_plugin"]

[tool.uv.sources]
datus-aws-common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
