[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-emr-serverless-plugin"
version = "0.1.0"
description = "Datus plugin: operate EMR Serverless applications and run/monitor Spark job runs from `datus emr-serverless`"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "emr", "emr-serverless", "spark", "plugin", "cli"]
dependencies = [
    "datus-aws-common>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.entry-points."datus.plugins"]
"emr-serverless" = "datus_emr_serverless_plugin.plugin:EmrServerlessPlugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_emr_serverless_plugin"]

[tool.uv.sources]
datus-aws-common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
