[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-glue-plugin"
version = "0.2.0"
description = "Datus plugin: browse the Glue Data Catalog and run/monitor Glue crawlers and ETL jobs from `datus glue`"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "glue", "plugin", "cli"]
dependencies = [
    "datus-aws-common>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jinja2>=3.1"]

[project.entry-points."datus.plugins"]
glue = "datus_glue_plugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_glue_plugin"]

[tool.uv.sources]
datus-aws-common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
