[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-s3-plugin"
version = "0.2.0"
description = "Datus plugin: browse and move S3 data (ls/stat/cat/cp/sync/rm/presign + S3 Select) from `datus s3`"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Datus" }]
keywords = ["datus", "aws", "s3", "plugin", "cli"]
dependencies = [
    "datus-aws-common>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jinja2>=3.1"]

[project.entry-points."datus.plugins"]
s3 = "datus_s3_plugin"

[tool.hatch.build.targets.wheel]
packages = ["datus_s3_plugin"]

[tool.uv.sources]
datus-aws-common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
